2012-03-05  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/Makefile.am,
	* driver/src/Makefile.am,
	* config/hls/configure.cfg,
	* config/hls/driver.cfg: Add build support for the hls/buffergen module.

2012-03-02  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/Makefile.am,
	* driver/src/Makefile.am: Add lp_solve as dependence when in HLS mode.
	* config/hls/configure.cfg,
	* config/hls/driver.cfg: Update to build lp_solve.

2012-03-01  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* configure.ac: Bump to pocc-1.0.1.

2012-03-01  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg,
	* config/base/configure.cfg,
	* config/local/configure.cfg,
	* config/stable/configure.cfg: Update pluto configure command.

2012-02-29  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/hls/configure.cfg,
	* config/hls/driver.cfg: Add Lotha module, pluto links with
	polylib-gmp in HLS mode.

2012-02-28  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-hlsir.cc,
	* driver/pocc/Makefile.am,
	* config/hls/configure.cfg: Minor fixes for the HLS mode. Use
	PolyLib/GMP by default when in HLS mode.

2012-02-28  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/autoconf/ax_boost_base.m4: Macro for BOOST detection.

2012-02-28  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	Provide --enable-hls mode. When using the HLS mode, this flag has
	to be turned on. It makes PoCC depend on Rose and BOOST when
	activated at configure time.

	* driver/pocc/include/pocc/driver-hlsir.h,
	* driver/pocc/driver-hlsir.cc: New. HLS pass (dummy).

	* configure.ac,
	* driver/pocc/Makefile.am: Update to support HLS mode.

	* config/hls/configure.cfg,
	* config/hls/driver.cfg: New. Configuration for HLS. Supports
	native Barvinok (including NTL) and the hlsir module.

2012-02-07  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* configure.ac,
	* driver/pocc/Makefile.am,