@@ -5,7 +5,7 @@
 ## Contact: <louis-noel.pouchet@inria.fr>
 ##
 ## Started on  Tue Apr 14 17:43:47 2009 Louis-Noel Pouchet
-## Last update Wed Jul 20 17:41:03 2011 Louis-Noel Pouchet
+## Last update Fri Mar  9 17:19:04 2012 Louis-Noel Pouchet
 ##
 #
 # pocc-util.in: this file is part of the PoCC project.
